--- a/apps/future-one/components/feature-section/feature-section.module.scss
+++ b/apps/future-one/components/feature-section/feature-section.module.scss
@@ -14,6 +14,7 @@
   list-style: none;
   flex-wrap: wrap;
   gap: 24px;
+  justify-content: center;
 
   @include breakpoints.tablet {
     gap: 40px;
